force-app/main/default/objects/OIP_DebugSession__c/OIP_DebugSession__c.object-meta.xml
<CustomObject>
    <fullName>OIP_DebugSession__c</fullName>
    <label>Debug Session</label>
    <pluralLabel>Debug Sessions</pluralLabel>
    <nameField>
        <displayFormat>SESSION-{0000}</displayFormat>
        <label>Debug Session Number</label>
        <startingNumber>1</startingNumber>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>