force-app/main/default/objects/OIP_DebugSession__c/fields/OIP_ActionsTaken__c.field-meta.xml
<CustomField>
    <fullName>OIP_ActionsTaken__c</fullName>
    <label>Actions Taken</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>