force-app/main/default/objects/OIP_DebugSession__c/fields/OIP_ConfidenceScore__c.field-meta.xml
<CustomField>
    <fullName>OIP_ConfidenceScore__c</fullName>
    <label>Confidence Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>