force-app/main/default/objects/OIP_DebugSession__c/fields/OIP_EducateContext__c.field-meta.xml
<CustomField>
    <fullName>OIP_EducateContext__c</fullName>
    <label>Educate Context</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>