force-app/main/default/objects/OIP_DebugSession__c/fields/OIP_EndTime__c.field-meta.xml
<CustomField>
    <fullName>OIP_EndTime__c</fullName>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>