force-app/main/default/objects/OIP_DebugSession__c/fields/OIP_OrgHealthScoreSnapshot__c.field-meta.xml
<CustomField>
    <fullName>OIP_OrgHealthScoreSnapshot__c</fullName>
    <label>Org Health Score Snapshot</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>