force-app/main/default/objects/OIP_DebugSession__c/fields/OIP_PrivacyMode__c.field-meta.xml
<CustomField>
    <fullName>OIP_PrivacyMode__c</fullName>
    <label>Privacy Mode</label>
    <type>Picklist</type>
    <picklist>
        <picklistValues>
            <fullName>Standard</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>PHI_Enabled</fullName>
        </picklistValues>
    </picklist>
</CustomField>