force-app/main/default/objects/OIP_DebugSession__c/fields/OIP_QueryText__c.field-meta.xml
<CustomField>
    <fullName>OIP_QueryText__c</fullName>
    <label>Query Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>