force-app/main/default/objects/OIP_DebugSession__c/fields/OIP_SessionType__c.field-meta.xml
<CustomField>
    <fullName>OIP_SessionType__c</fullName>
    <label>Session Type</label>
    <required>true</required>
    <type>Picklist</type>
    <picklist>
        <picklistValues>
            <fullName>Search</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>ImpactAnalysis</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>RootCause</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>SecurityDebug</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>DeploymentDebug</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>AutomationConflict</fullName>
        </picklistValues>
    </picklist>
</CustomField>