force-app/main/default/objects/OIP_DebugSession__c/fields/OIP_StartTime__c.field-meta.xml
<CustomField>
    <fullName>OIP_StartTime__c</fullName>
    <label>Start Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>