force-app/main/default/objects/OIP_DebugSession__c/fields/OIP_SummaryFindings__c.field-meta.xml
<CustomField>
    <fullName>OIP_SummaryFindings__c</fullName>
    <label>Summary Findings</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>