force-app/main/default/objects/OIP_DebugSession__c/fields/OIP_UserId__c.field-meta.xml
<CustomField>
    <fullName>OIP_UserId__c</fullName>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Debug Sessions</relationshipLabel>
    <relationshipName>DebugSessions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>